--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,15 @@
 {
-  "rewrites": [
-      {
-        "source": "/api/(.*)",
-        "destination": "/api"
-      },
-      {
-        "source": "/",
-        "destination": "/api"
-      }
-  ]
+    "version": 2,
+    "builds": [
+        {
+            "src": "index.js",
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "index.js"
+        }
+    ]
 }
