--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "scripts": {
         "start": "node ./api/index.js",
         "dev": "nodemon ./api/index.js",
+        "lint": "eslint .",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
@@ -12,6 +13,10 @@
     "license": "ISC",
     "description": "",
     "devDependencies": {
+        "@eslint/js": "^9.6.0",
+        "@stylistic/eslint-plugin-js": "^2.3.0",
+        "eslint": "^9.6.0",
+        "globals": "^15.6.0",
         "nodemon": "^3.1.4"
     },
     "dependencies": {
